# sayvai-llama-agent

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  manifest.ini  pyproject.toml
.github/workflows/: python-ci.yml
Docs/: installation.md
Scripts/: build.bat  lint.bat  run.bat
app/: __init__.py  main.py
src/sayvai_llama/: __init__.py
tests/test_init/: test_import.py
